# StakeforgeEngine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  StakeForge.licenseheader
StakeforgeEditor/: CMakeLists.txt
StakeforgeEditor/StakeforgeEditor/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  StakeforgeEditor.csproj  SubWindow.xaml  SubWindow.xaml.cs
StakeforgeEditor/StakeforgeEditor/Commands/: RelayCommand.cs
StakeforgeEditor/StakeforgeEditor/Common/: AutoScrollBehavior.cs  Common.cs  IJsonStreamable.cs  Log.cs  WinAPI.cs
StakeforgeEditor/StakeforgeEditor/Converters/: BooleanToVisibilityConverter.cs  DockOverlayStateToVisibilityConverter.cs  LogLevelToBrush.cs  LogMaskToIconConverter.cs  PercentageConverter.cs  ResourceTypeConverters.cs
StakeforgeEditor/StakeforgeEditor/Editor/: ConnectionManager.cs  Editor.cs  EditorLayout.cs  EditorPaths.cs  EditorSettings.cs  ProjectSettings.cs
StakeforgeEditor/StakeforgeEditor/Engine/: EngineAPI.cs
StakeforgeEditor/StakeforgeEditor/Main/: DockArea.xaml  DockArea.xaml.cs  DockAreaViewModel.cs  DockContainer.xaml  DockContainer.xaml.cs  DragDropHandler.cs  DragDropPreviewWindow.cs  HierarchyView.xaml  HierarchyView.xaml.cs  HierarchyViewModel.cs  PanelViewModel.cs  ResourcesView.xaml  ResourcesView.xaml.cs  ResourcesViewModel.cs  TopBar.xaml  TopBar.xaml.cs  TopBarViewModel.cs
StakeforgeEditor/StakeforgeEditor/Panels/: ConsoleView.xaml  ConsoleView.xaml.cs  ConsoleViewModel.cs  EntitiesView.xaml  EntitiesView.xaml.cs  EntitiesViewModel.cs  PanelViewModel.cs  Panels.cs  PropertiesView.xaml  PropertiesView.xaml.cs  PropertiesViewModel.cs  ResourceNode.cs  ResourcesView.xaml  ResourcesView.xaml.cs  ResourcesViewModel.cs  WorldView.xaml  WorldView.xaml.cs  WorldViewModel.cs
StakeforgeEditor/StakeforgeEditor/Widgets/: InputFieldDefault.cs  MenuItemDefault.cs
StakeforgeEditor/StakeforgeEditor/resources/: buttons.xaml  context_menus.xaml  data_templates.xaml  input_fields.xaml  scroll_bars.xaml  tabs.xaml  theme.xaml
StakeforgeEditor/_Resources/: StakeforgeEditor.rc
StakeforgeEditor/include/: Editor.hpp  StakeforgeEditor.hpp  StakeforgeEditorAPI.hpp
StakeforgeEditor/include/SFG/Editor/: Editor.hpp
StakeforgeEditor/src/: Editor.cpp  StakeforgeEditor.cpp
StakeforgeGame/: CMakeLists.txt
StakeforgeGame/_Resources/: Game.rc  StakeforgeGame.rc
StakeforgeGame/include/: Game.hpp  GameDelegate.cpp  StakeforgeGame.hpp
StakeforgeGame/src/: Game.cpp  GameDelegate.hpp  StakeforgeGame.cpp
StakeforgeGame/src/Platform/OSX/: Main.mm
StakeforgeGame/src/Platform/Win32/: Main.cpp
StakeforgeSDK/: CMakeLists.txt
StakeforgeSDK/Dependencies/: version_info.txt
StakeforgeSDK/Dependencies/phmap/include/parallel_hashmap/: phmap.h  phmap_base.h
StakeforgeSDK/include/SFG/: Stakeforge.hpp  StakeforgeAPI.hpp
StakeforgeSDK/include/SFG/Core/: App.hpp  AppDelegate.hpp  AppSettings.hpp  GameDelegate.hpp
StakeforgeSDK/include/SFG/Data/: Atomic.hpp  Bitmask.hpp  Deque.hpp  DynamicArray.hpp  Functional.hpp  Handle.hpp  HashMap.hpp  HashSet.hpp  IStream.hpp  Mutex.hpp  OStream.hpp  Pair.hpp  Pool.hpp  Queue.hpp  RawStream.hpp  Semaphore.hpp  Span.hpp  String.hpp  StringUtil.hpp  StringView.hpp  Vector.hpp  VectorUtil.hpp
StakeforgeSDK/include/SFG/Gfx/: CommandStream.hpp  GfxResources.hpp  RenderFrame.hpp  RenderSemaphore.hpp  RenderTarget.hpp  Renderer.hpp
StakeforgeSDK/include/SFG/Gfx/Commands/: CMDBindPipeline.hpp  CMDCopy.hpp  CMDDraw.hpp  CMDRenderPass.hpp  CommandType.hpp
StakeforgeSDK/include/SFG/Gfx/Common/: GfxConstants.hpp  LoadStoreOp.hpp  QueueDesc.hpp  RenderTargetDesc.hpp  ResolveMode.hpp  ResourceDesc.hpp  SamplerDesc.hpp  Scissors.hpp  ShaderDesc.hpp  (+6 more)
StakeforgeSDK/include/SFG/IO/: Assert.hpp  FileSystem.hpp  FileWatcher.hpp  Log.hpp
StakeforgeSDK/include/SFG/Math/: AABB.hpp  Color.hpp  ColorUtils.hpp  Easing.hpp  Equals.hpp  FastPow.hpp  Frustum.hpp  Math.hpp  Matrix3x3.hpp  Matrix4x4.hpp  Plane.hpp  Quaternion.hpp  Random.hpp  Rect.hpp  Transformation.hpp  Tween.hpp  Vector2.hpp  Vector2i.hpp  Vector2ui.hpp  Vector3.hpp  Vector3i.hpp  Vector3ui.hpp  Vector4.hpp  Vector4i.hpp  Vector4ui.hpp  Vector4ui16.hpp
StakeforgeSDK/include/SFG/Memory/: AllocatorBucket.hpp  BumpAllocator.hpp  Memory.hpp  PoolAllocator.hpp
StakeforgeSDK/include/SFG/Platform/: InputAction.hpp  InputMappings.hpp  KeyEvent.hpp  Main.hpp  MonitorInfo.hpp  MouseDeltaEvent.hpp  MouseEvent.hpp  MouseWheelEvent.hpp  Process.hpp  Time.hpp  Window.hpp  WindowEvent.hpp  WindowStyle.hpp
StakeforgeSDK/include/SFG/Resources/: Resource.hpp  ResourceHeader.hpp  ResourceManager.hpp  ResourceState.hpp  ResourceType.hpp  Shader.hpp  Texture.hpp  TextureBuffer.hpp  TextureLoadOptions.hpp
StakeforgeSDK/include/SFG/Serialization/: Compressor.hpp  Endianness.hpp  Serialization.hpp
StakeforgeSDK/include/SFG/System/: Plugin.hpp
StakeforgeSDK/include/SFG/Type/: SizeDefinitions.hpp  StringID.hpp
StakeforgeSDK/src/Core/: App.cpp  AppDelegate.cpp
StakeforgeSDK/src/Data/: IStream.cpp  OStream.cpp  RawStream.cpp  StringUtil.cpp
StakeforgeSDK/src/Gfx/: CommandStream.cpp  GfxResources.cpp  RenderFrame.cpp  RenderSemaphore.cpp  RenderTarget.cpp  Renderer.cpp
StakeforgeSDK/src/IO/: FileSystem.cpp  FileWatcher.cpp  Log.cpp
StakeforgeSDK/src/Math/: AABB.cpp  Color.cpp  ColorUtils.cpp  Easing.cpp  FastPow.cpp  Frustum.cpp  Math.cpp  Matrix3x3.cpp  Matrix4x4.cpp  Plane.cpp  Quaternion.cpp  Random.cpp  Rect.cpp  Transformation.cpp  Tween.cpp  Vector2.cpp  Vector2i.cpp  Vector2ui.cpp  Vector3.cpp  Vector3i.cpp  Vector3ui.cpp  Vector4.cpp  Vector4i.cpp  Vector4ui.cpp  Vector4ui16.cpp
StakeforgeSDK/src/Memory/: AllocatorBucket.cpp  BumpAllocator.cpp
StakeforgeSDK/src/Platform/OSX/: Main.mm  OSXTime.mm  OSXWindow.mm  Process.mm  Time.mm  Window.mm
StakeforgeSDK/src/Platform/Win32/: Main.cpp  Process.cpp  Time.cpp  Window.cpp
StakeforgeSDK/src/Resources/: ResourceManager.cpp  Shader.cpp  Texture.cpp
StakeforgeSDK/src/Serialization/: Compressor.cpp  Endianness.cpp  Serialization.cpp
StakeforgeSDK/src/Type/: StringID.cpp
(+406 files in other folders)
